# FNN

./: CMakeLists.txt
Headers/: activation_functions.h  data.h  exception.h  gradient.h  loss.h  neural_layer.h  neural_net.h  training_algorithm.h
Source/: activation_functions.cpp  gradient.cpp  loss.cpp  main.cpp  neural_layer.cpp  neural_net.cpp  training_algorithm.cpp
